# Lithium

./: .gitignore  README.md  index.html
.github/workflows/: release.yml
crates/lithium/: Cargo.toml
crates/lithium/src/: logic.rs  main.rs  rendering.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
pkg/: lithium.js  lithium_bg.wasm
scripts/: logic.js  main.js  rendering.js
